# auto-commit

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
auto_commit/: __init__.py  core.py
tests/: test_auto_commit.py
